--- a/composer.json
+++ b/composer.json
@@ -23,14 +23,11 @@
         "ext-pcntl": "*",
         "ext-posix": "*",
         "cakephp/chronos": "^1.0",
-        "illuminate/contracts": "~5.7.0|~5.8.0|^6.0",
-        "illuminate/queue": "~5.7.0|~5.8.0|^6.0",
-        "illuminate/support": "~5.7.0|~5.8.0|^6.0",
         "predis/predis": "^1.1",
         "ramsey/uuid": "^3.5",
         "symfony/process": "^4.2",
         "symfony/debug": "^4.2",
-        "laravelista/lumen-vendor-publish": "~5.7.0|~5.8.0|^6.0"
+        "laravelista/lumen-vendor-publish": "~5.7.0|~5.8.0|^6.0|^7.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
